infrastructure/sg_ec2_grafana.tf
resource "aws_security_group" "grafana_ec2_sg" {
  name        = "${local.appname}-grafana-ec2-sg"
  description = "Allow SSH and Garfana ports"

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
